--- a/index.html
+++ b/index.html
@@ -15,18 +15,25 @@
   </head>
   <body>
     <section class="s1">
-      <div class="mainCnt">
-        <h1>Hi, I am Aleksandr Kataev</h1>
+      <div class="main-cnt">
+        <div class="greeting-wrapper">
+          <h1>Hi, I am Aleksandr Kataev</h1>
+        </div>
+        <div class="intro-wrapper">
+          <div class="nav-wrapper">Nav</div>
+          <div class="left-column">Left column</div>
+          <div class="right-column">Right column</div>
+        </div>
       </div>
     </section>
     <section class="s2">
-      <div class="mainCnt"><p>About</p></div>
+      <div class="main-cnt"><p>About</p></div>
     </section>
     <section class="s1">
-      <div class="mainCnt"><p>Portfolio</p></div>
+      <div class="main-cnt"><p>Portfolio</p></div>
     </section>
     <section class="s2">
-      <div class="mainCnt"><p>Contact</p></div>
+      <div class="main-cnt"><p>Contact</p></div>
     </section>
   </body>
 </html>
