--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
           <h1>Hi, I am Aleksandr Kataev</h1>
         </div>
         <div class="intro-wrapper">
-          <div class="nav-wrapper">Nav</div>
+          <div class="nav-wrapper">
+            <div class="dots-wrapper">
+              <div id="dot-one" class="browser-dot"></div>
+              <div id="dot-two" class="browser-dot"></div>
+              <div id="dot-three" class="browser-dot"></div>
+            </div>
+            <ul class="navigation">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Porfolio</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
           <div class="left-column">Left column</div>
           <div class="right-column">Right column</div>
         </div>
