--- a/index.html
+++ b/index.html
@@ -28,12 +28,28 @@
             </div>
             <ul class="navigation">
               <li><a href="#">About</a></li>
-              <li><a href="#">Porfolio</a></li>
+              <li><a href="#">Porfolio </a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
-          <div class="left-column">Left column</div>
-          <div class="right-column">Right column</div>
+          <div class="left-column">
+            <img id="profile-pic" src="./personal_image.png" />
+          </div>
+          <div class="right-column">
+            <div>
+              <div id="preview">
+                <div id="corner-top-left" class="corner"></div>
+                <div id="corner-top-right" class="corner"></div>
+                <h3 id="preview-heading">Who Am I</h3>
+                <p>
+                  Final year computer science student at the
+                  University of Essex
+                </p>
+                <div id="corner-bottom-left" class="corner"></div>
+                <div id="corner-bottom-right" class="corner"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
