Added about me section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div id="corner-top-left" class="corner"></div>
                 <div id="corner-top-right" class="corner"></div>
                 <h3 id="preview-heading">Who Am I</h3>
-                <p>
+                <p style="margin-bottom: 10px">
                   Final year computer science student at the
                   University of Essex
                 </p>
@@ -54,11 +54,53 @@
       </div>
     </section>
     <section class="s2">
-      <div class="main-cnt"><p>About</p></div>
+      <div class="main-cnt">
+        <div class="about-wrapper">
+          <div class="about-me">
+            <h4>More about me</h4>
+            <p class="about-me-p">
+              Final year computer science student looking to exploire
+              different aspects of technology.
+            </p>
+            <p class="about-me-p">
+              Have passion in artififcial inteligence and web
+              development but keen to explore other areas and discover
+              my future career path.
+            </p>
+            <a
+              style="display: inline-block"
+              class="about-me-p"
+              target="_blank"
+              href="CV_AK.pdf"
+              >Download CV</a
+            >
+          </div>
+
+          <div class="social-links">
+            <h4>Skills</h4>
+            <div id="skills">
+              <ul>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node/Express</li>
+                <li>Python</li>
+                <li>TensorFlow</li>
+                <li>Java</li>
+              </ul>
+              <ul>
+                <li>Git/GitHub</li>
+                <li>Firebase</li>
+                <li>Heroku</li>
+                <li>REST API</li>
+                <li>HTML/CSS</li>
+                <li>Adobe XD</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <section class="s1">
-      <div class="main-cnt"><p>Portfolio</p></div>
-    </section>
+    <section class="s1"></section>
     <section class="s2">
       <div class="main-cnt"><p>Contact</p></div>
     </section>
