Added contact functionality

--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
       <div class="main-cnt">
         <p class="heading">Get in touch</p>
         <div class="form-wrapper">
-          <form id="contact-form">
+          <form
+            id="contact-form"
+            action="https://formspree.io/f/mqkgbpql"
+            method="POST"
+          >
             <label>Name</label>
             <input class="input-field" type="text" name="name" />
 
