Fixed spelling mistakes, added CV

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Aleksandr Kataev</title>
+    <link rel="icon" type="image/png" href="media/portfolio.png" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap"
@@ -59,11 +60,11 @@
           <div class="about-me">
             <h4>More about me</h4>
             <p class="about-me-p">
-              Final year computer science student looking to exploire
+              Final year computer science student looking to explore
               different aspects of technology.
             </p>
             <p class="about-me-p">
-              Have passion in artififcial inteligence and web
+              Have passion in artificial intelligence and web
               development but keen to explore other areas and discover
               my future career path.
             </p>
@@ -71,7 +72,7 @@
               style="display: inline-block"
               class="about-me-p"
               target="_blank"
-              href="CV_AK.pdf"
+              href="media/CV_AK.pdf"
               >Download CV</a
             >
           </div>
@@ -235,7 +236,7 @@
                 </p>
                 <div class="tags-cnt">
                   <p class="project-tag">React</p>
-                  <p class="project-tag">HTML/SCSS</p>
+                  <p class="project-tag">HTML/SASS</p>
                   <p class="project-tag">Firebase</p>
                 </div>
                 <div class="project-links">
