Changed label of A* algorithm project

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </p>
                 <div class="tags-cnt">
                   <p class="project-tag">Java</p>
-                  <p class="project-tag">JFrame</p>
+                  <p class="project-tag">Swing</p>
                 </div>
                 <div class="project-links">
                   <a
