Added form validation, media query for thumbnail

--- a/index.html
+++ b/index.html
@@ -244,16 +244,16 @@
       <div class="form-wrapper">
         <form id="contact-form" action="https://formspree.io/f/mqkgbpql" method="POST">
           <label>Name</label>
-          <input class="input-field" type="text" name="name" />
+          <input class="input-field" type="text" name="name" required />
 
           <label>Subject</label>
-          <input class="input-field" type="text" name="subject" />
+          <input class="input-field" type="text" name="subject" required />
 
           <label>Email</label>
-          <input class="input-field" type="text" name="email" />
+          <input class="input-field" type="text" name="email" required />
 
           <label>Message</label>
-          <textarea class="input-field" name="message"></textarea>
+          <textarea class="input-field" name="message" required></textarea>
 
           <input id="submit-btn" type="submit" value="Send" />
         </form>
