--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
               <li>JavaScript</li>
               <li>React</li>
               <li>Node/Express</li>
-              <li>Python</li>
-              <li>TensorFlow</li>
               <li>Java</li>
+              <li>Python</li>
+              <li>C#</li> 
             </ul>
             <ul>
               <li>Git/GitHub</li>
               <li>Firebase</li>
-              <li>Heroku</li>
+              <li>SQL</li>
               <li>REST API</li>
               <li>HTML/CSS</li>
-              <li>Adobe XD</li>
+              <li>PHP</li>
             </ul>
           </div>
         </div>
