--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
               <div id="corner-top-right" class="corner"></div>
               <h3 id="preview-heading">Who Am I</h3>
               <p style="margin-bottom: 10px">
-                Final year computer science student at the
-                University of Essex
+                Full Stack Developer at Basis Technologies
               </p>
               <div id="corner-bottom-left" class="corner"></div>
               <div id="corner-bottom-right" class="corner"></div>
@@ -56,17 +55,12 @@
         <div class="about-me">
           <h4>More about me</h4>
           <p class="about-me-p">
-            Final year computer science student looking to explore
-            different aspects of technology.
-          </p>
-          <p class="about-me-p">
             Have passion in artificial intelligence and web
             development but keen to explore other areas and discover
             my future career path.
           </p>
           <a style="display: inline-block" class="about-me-p" target="_blank" href="media/CV_AK.pdf">Download CV</a>
         </div>
-
         <div class="social-links">
           <h4>Skills</h4>
           <div id="skills">
