--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <div id="corner-top-right" class="corner"></div>
               <h3 id="preview-heading">Who Am I</h3>
               <p style="margin-bottom: 10px; font-weight: 700">
-                Full Stack Developer at Basis Technologies
+                Software Engineer at Enable
               </p>
               <div id="corner-bottom-left" class="corner"></div>
               <div id="corner-bottom-right" class="corner"></div>
@@ -55,8 +55,7 @@
         <div class="about-me">
           <h3>More about me</h3>
           <p class="about-me-p" style="font-weight: 700">
-            Have passion in web development and artificial intelligence 
-            but keen to explore other areas and discover my future career path.
+            Software Engineer with 3+ years of experience specializing in C#/.NET and TypeScript, building scalable and maintainable software solutions
           </p>
           <a style="display: inline-block; font-size: 18px" class="about-me-p" target="_blank" href="media/AleksandrKataevCV.pdf">Download CV</a>
         </div>
@@ -64,18 +63,18 @@
           <h3>Skills</h3>
           <div id="skills" >
             <ul style="font-weight: 700">
-              <li>JavaScript/TypeScript</li>
-              <li>NodeJS/Express</li>
-              <li>ReactJS</li>
-              <li>Python</li>
-              <li>Java</li>
+              <li>C#/.NET</li>
+              <li>TypeScript/Node.js</li>
+              <li>React.js</li>
+              <li>Azure</li>
+              <li>RabbitMQ</li>
             </ul>
             <ul>
+              <li>REST API</li>
+              <li>SQL Server</li>
               <li>Git/Jira</li>
-              <li>Docker</li>
-              <li>Linux/Bash</li>
               <li>CI/CD</li>
-              <li>SQL</li>
+              <li>Tailwind CSS</li>
             </ul>
           </div>
         </div>
