New CV and updated skills

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
               <li>React.js</li>
               <li>Azure</li>
               <li>RabbitMQ</li>
+              <li>Python</li>
             </ul>
             <ul>
               <li>REST API</li>
@@ -75,6 +76,7 @@
               <li>Git/Jira</li>
               <li>CI/CD</li>
               <li>Tailwind CSS</li>
+              <li>Docker</li>
             </ul>
           </div>
         </div>
